<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInputFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="324dp"
        android:text="@string/user_input_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversion_label" />

    <TextView
        android:id="@+id/user_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="116dp"
        android:text="@string/user_input_form_label"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_weight_form"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_input_label" />

    <RadioGroup
        android:id="@+id/weight_selection_radio_original"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="198dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/input_weight_form"
        app:layout_constraintTop_toTopOf="parent"
        android:checkedButton="@id/lbs_radio_original">

        <RadioButton
            android:id="@+id/lbs_radio_original"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:text="@string/pounds_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/kgs_radio_original"
            android:layout_width="62dp"
            android:layout_height="60dp"
            android:text="@string/kilos_short" />

    </RadioGroup>

    <TextView
        android:id="@+id/conversion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="42dp"
        android:text="@string/converting_to_kgs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_weight_form" />

</androidx.constraintlayout.widget.ConstraintLayout>